--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .card-image img:hover {
-    transform: translate(0, -5px); 
+    transform: scale(1.1); 
     transition: transform 0.3s ease;
 }
+
 
